--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Portfolio - Home</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="hero">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Passionate [Your Profession] specializing in [Your Key Skills].</p>
+        <a href="contact.html">Connect with Me</a>
+    </section>
+
+    <!-- Other content or sections as needed -->
+
+    <footer>
+        <p>&copy; 2023 Your Name. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+Please note that this code assumes you have a CSS file named styles.css in the same directory as your HTML files. You can customize the content and styling further according to your preferences. Additionally, you can add more sections and content as needed to complete your homepage.
+
+
+
+
+
 
