--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Portfolio - Home</title>
+    <title>Manav Patel - Home Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,22 +18,33 @@
     </header>
 
     <section class="hero">
-        <h1>Welcome to My Portfolio</h1>
-        <p>Passionate [Your Profession] specializing in [Your Key Skills].</p>
-        <a href="contact.html">Connect with Me</a>
+        <div class="hero-content">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Passionate student studying Information Systems specializing in Data Science.</p>
+            <a href="#contact" class="cta-button">Connect with Me</a>
+        </div>
     </section>
 
-    <!-- Other content or sections as needed -->
+    <section class="bio">
+        <h2>About Me</h2>
+        <p>I've embarked on an exciting journey in the world of Tech. With 3 years of experience, I've honed my skills in HTML, CSS, PowerBI, SQL and Excel. My passion lies in Data Science. Whether it's a Small or Big task, I always strive for excellence.</p>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2>Contact Me</h2>
+        <p>Interested in working together? Sign up below to receive my personal Resume:</p>
+        <!-- Mailchimp Signup Form -->
+        <form action="your-mailchimp-form-action-url" method="POST">
+            <input type="email" name="email" placeholder="Your Email Address" required>
+            <button type="submit">Sign Up</button>
+        </form>
+    </section>
 
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2023 Manav Patel. All rights reserved.</p>
     </footer>
 </body>
 </html>
-Please note that this code assumes you have a CSS file named styles.css in the same directory as your HTML files. You can customize the content and styling further according to your preferences. Additionally, you can add more sections and content as needed to complete your homepage.
-
-
-
 
 
 
