--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
 
     <footer>
         <p>&copy; 2023 Manav Patel. All rights reserved.</p>
+
+
+        <!-- Social Links -->
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/manav-patel-b41a52213" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            <a href="https://github.com/Manav0151" target="_blank" rel="noopener noreferrer">GitHub</a>
+        </div>
     </footer>
 </body>
 </html>
+  
 
 
 
