--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
     <section class="bio">
         <h2>About Me</h2>
+
+        <p> I Started My personal academic Journey at John P. Stevens High School in Edison, NJ from (2015-2019).</p>
+
+        <p> I then Started my profesional Academic Career at New Jersey Institute of Technology Studying Information Systems Minoring in Information Technology (2020-2024).</p>
+        
         <p>I've embarked on an exciting journey in the world of Tech. With 3 years of experience, I've honed my skills in HTML, CSS, PowerBI, SQL and Excel. My passion lies in Data Science. Whether it's a Small or Big task, I always strive for excellence.</p>
     </section>
 
