--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> My Personal - Projects</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <section class="projects" id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <img src="project1-image.jpg" alt="Project 1">
+            <h3>Project 1:Roll a Ball</h3>
+            <p> Created a Virtual Game using Unity called Roll a Ball</p>
+            <p> Fully Interactive Game with Scoreboard and live leaderboards</p>
+            <p> Unity Game Development mainly using C# </p>
+        </div>
+        <div class="project">
+            <img src="project2-image.jpg" alt="Project 2">
+            <h3>Project 2: Virtual Resume </h3>
+            <p> Created an Interactive Personal Resume to Highlight my Skills</p>
+            <p> I Have personally been told by my past Job Recruiter that this was cool and unique </p>
+            <p> HTML, CSS, JS </p>
+        </div>
+    </section>
+
+    <section class="contact" id="contact">
+        <h2>Contact Me</h2>
+        <p>Interested in working together? Sign up below to receive my Personal Resume:</p>
+        <!-- Mailchimp Signup Form -->
+        <form action="your-mailchimp-form-action-url" method="POST">
+            <input type="email" name="email" placeholder="Your Email Address" required>
+            <button type="submit">Sign Up</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Manav Patel. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
