--- a/about.html
+++ b/about.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>About Me</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="about">
+        <div class="about-content">
+            <h1>About Me</h1>
+            <p>Hello! I'm [Your Name], and I have an insatiable passion for technology. From a young age, I've been captivated by the endless possibilities that technology offers. The way it seamlessly integrates into our lives, making complex tasks simpler and connecting people across the globe, is nothing short of magical to me.</p>
+            <p>What excites me most is the potential for the future. As technology continues to evolve at an exponential pace, we stand on the brink of revolutionary breakthroughs. From artificial intelligence and virtual reality to renewable energy and space exploration, the opportunities are boundless. I'm thrilled to be part of this ever-changing landscape, contributing my skills and creativity to shape the future in meaningful ways.</p>
+            <p>Join me on this exciting journey as we explore the frontiers of technology together!</p>
+        </div>
+        <img src="profile-picture.jpg" alt="Profile Picture">
+    </section>
+
+    <footer>
+        <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
