--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
+                <li><a href="Privacy_Policy.html">PrivacyPolicy</a></li>
             </ul>
         </nav>
     </header>
