--- a/projects.html
+++ b/projects.html
@@ -20,14 +20,14 @@
     <section class="projects" id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <img src="project1-image.jpg" alt="Project 1">
+            <img src="Roll A Ball 4.png" alt="Project 1">
             <h3>Project 1:Roll a Ball</h3>
             <p> Created a Virtual Game using Unity called Roll a Ball</p>
             <p> Fully Interactive Game with Scoreboard and live leaderboards</p>
             <p> Unity Game Development mainly using C# </p>
         </div>
         <div class="project">
-            <img src="project2-image.jpg" alt="Project 2">
+            <img src="Screen Shot 2023-03-23 at 4.35.09 PM.png" alt="Virtual Resume">
             <h3>Project 2: Virtual Resume </h3>
             <p> Created an Interactive Personal Resume to Highlight my Skills</p>
             <p> I Have personally been told by my past Job Recruiter that this was cool and unique </p>
