--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -14,7 +14,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+    </head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="Privacy_Policy.html">PrivacyPolicy</a></li>
+            </ul>
+        </nav>
+    </header>
+
 <body>
     <header>
         <h1>Privacy Policy</h1>
