--- a/about.html
+++ b/about.html
@@ -27,6 +27,26 @@
         </nav>
     </header>
 
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Photo Grid</title>
+</head>
+<body>
+    <section class="photo-grid">
+        <div class="photo"><img src="Amazon.jpeg" alt="Amazon"></div>
+        <div class="photo"><img src="Russell.png" alt="Image 2"></div>
+        <div class="photo"><img src="kumon.jpeg" alt="Image 3"></div>
+        <div class="photo"><img src="Sigma.png" alt="Image 4"></div>
+        <div class="photo"><img src="Njit.jpeg" alt="Image 5"></div>
+        <div class="photo"><img src="Roll A Ball 4.png" alt="Image 6"></div>
+    </section>
+</body>
+</html>
+
     <section class="about">
         <div class="about-content">
             <h1>About Me</h1>
