--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <section class="photo-grid">
         <div class="photo"><img src="Amazon.jpeg" alt="Amazon"width="300" height="300"></div>
         <div class="photo"><img src="Russell.png" alt="Image 2"width="300" height="300"></div>
-        <div class="photo"><img src="kumon.jpeg" alt="Image 3"width="300" height="300"></div>
+        <div class="photo"><img src="Kumon.jpeg" alt="Image 3"width="300" height="300"></div>
         <div class="photo"><img src="Sigma.png" alt="Image 4"width="300" height="300"></div>
         <div class="photo"><img src="Njit.jpeg" alt="Image 5"width="300" height="300"></div>
         <div class="photo"><img src="Roll A Ball 4.png" alt="Image 6"width="300" height="300"></div>
