--- a/about.html
+++ b/about.html
@@ -37,12 +37,16 @@
 </head>
 <body>
     <section class="photo-grid">
-        <div class="photo"><img src="Amazon.jpeg" alt="Amazon"width="300" height="300"></div>
-        <div class="photo"><img src="Russell.png" alt="Image 2"width="300" height="300"></div>
-        <div class="photo"><img src="Kumon.jpeg" alt="Image 3"width="300" height="300"></div>
-        <div class="photo"><img src="Sigma.png" alt="Image 4"width="300" height="300"></div>
-        <div class="photo"><img src="Njit.jpeg" alt="Image 5"width="300" height="300"></div>
-        <div class="photo"><img src="Roll A Ball 4.png" alt="Image 6"width="300" height="300"></div>
+        <div class="row">
+            <div class="photo"><img src="Njit.jpeg" alt="Image 1"></div>
+            <div class="photo"><img src="Roll A Ball 4.png" alt="Image 2"></div>
+            <div class="photo"><img src="Sigma.png" alt="Image 3"></div>
+        </div>
+        <div class="row">
+            <div class="photo"><img src="Amazon.jpeg" alt="Image 4"></div>
+            <div class="photo"><img src="Kumon.jpeg" alt="Image 5"></div>
+            <div class="photo"><img src="Russell.png" alt="Image 6"></div>
+        </div>
     </section>
 </body>
 </html>
